[package]
name = "wowgo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wowgo"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
dotenv = "0.15.0"
solana-program = "1.18.26"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

